--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+permalink: /
 ---
 {% include banner.html %}
 
@@ -12,5 +13,4 @@ layout: default
       </div>
     </div>
 
-  </div>
-</div>
+{% include links.html %}
