--- a/eventi.html
+++ b/eventi.html
@@ -1,25 +1,25 @@
 ---
 layout: default
 ---
-<div id="index-banner">
-	<div class="row">
-	  <div class="col s8 offset-s2">
-		{% for e in site.data.eventi %}
-			<div class="col s6">
-				<a href="{{site.url}}/eventi/{{e.title}}" class="card horizontal">
-					<div class="card-image">
-						<img src="{{ site.url }}/{{ e.locandina.url }}" alt="{{ e.locandina.alt }}">
+<div class="container">
+	<div id="index-banner">
+		<div class="row">
+				{% for item in site.data.eventi %}
+					<div class="col s12 m12 l6 xl6">
+						<a href="{{site.url}}/eventi/{{item.link}}" class="card large" style="display:block;">
+							<div class="card-image">
+								<div style="position: absolute; width: 100%; top: 0; left: 0; right: 0; bottom: 0; background: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.5)); z-index:1;"></div>
+								<img src="{{ site.url }}/{{ item.locandina.url }}" alt="{{ item.locandina.alt }}">
+								<span class="card-title" style="z-index: 2; text-shadow: 2px 2px rgba(0,0,0,1);">{{ item.title }}</span>
+							</div>
+							<div class="card-content">
+								<p style="color: black">{{ item.descrizione }}</p>
+							</div>
+						</a>
 					</div>
-					<div class="card-stacked">
-						<div class="card-content">
-							<p style="color: black">{{ e.incipit }}</p>
-						</div>
-					</div>
-				</a>
-			</div>
-		{% endfor %}
-	  </div>
-	</div>
-  </div>
+				{% endfor %}
 
+		</div>
+	</div>
+</div>
 {% include links.html %}
