--- a/eventi.html
+++ b/eventi.html
@@ -5,9 +5,9 @@ layout: default
 	<div id="index-banner">
 		<div class="row">
 			{% for item in site.data.eventi %}
-				<div class="col s12 m12 l6 xl6">
-					<a href="{{site.url}}/eventi/{{item.link}}" class="card large" style="display:block;">
-						<div class="card-image">
+				<div class="col s12 m12 l6 xl6 ">
+					<a href="{{site.url}}/eventi/{{item.link}}" class="card large hoverable" style="display:block;">
+						<div class="card-image waves-effect waves-block waves-light">
 							<div style="position: absolute; width: 100%; top: 0; left: 0; right: 0; bottom: 0; background: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.5)); z-index:1;"></div>
 							<img src="{{ site.url }}/{{ item.locandina.url }}" alt="{{ item.locandina.alt }}">
 							<span class="card-title" style="z-index: 2; text-shadow: 2px 2px rgba(0,0,0,1);">{{ item.title }}</span>
