--- a/eventi.html
+++ b/eventi.html
@@ -1,22 +1,37 @@
 ---
 layout: default
 ---
+
 <div class="container">
+	<h2 class="header">Prossimamente</h2>
+
+	<div id="index-banner">
+
+		<div class="row">
+			{% assign liveevents = 0 %}
+			{% for event in site.eventi reversed %}
+			{% if event.date >= site.time %}
+			{% assign liveevents = liveevents | plus: 1 %}
+			{% include event_card.html event=event %}
+			{% endif %}
+			{% endfor %}
+			{% if liveevents == 0 %}
+			<ul class="collection"> 
+				<li class="collection-item"> Non ci sono eventi in programma. </li>
+			</ul>
+			{% endif %}
+		</div>
+	</div>
+</div>
+
+<div class="container">
+	<h2 class="header">Eventi passati</h2>
 	<div id="index-banner">
 		<div class="row">
-			{% for item in site.data.eventi %}
-				<div class="col s12 m12 l6 xl6 ">
-					<a href="{{site.url}}/eventi/{{item.link}}" class="card large hoverable" style="display:block;">
-						<div class="card-image waves-effect waves-block waves-light">
-							<div style="position: absolute; width: 100%; top: 0; left: 0; right: 0; bottom: 0; background: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.5)); z-index:1;"></div>
-							<img src="{{ site.url }}/{{ item.locandina.url }}" alt="{{ item.locandina.alt }}">
-							<span class="card-title" style="z-index: 2; text-shadow: 2px 2px rgba(0,0,0,1);">{{ item.title }}</span>
-						</div>
-						<div class="card-content">
-							<p style="color: black">{{ item.descrizione }}</p>
-						</div>
-					</a>
-				</div>
+			{% for event in site.eventi reversed %}
+			{% if event.date < site.time %}
+			{% include event_card.html event=event %}
+			{% endif %}
 			{% endfor %}
 		</div>
 	</div>
