--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@ layout: default
 <div class="section">
   	<div class="row">
     	<div class="col s8 offset-s2">
-      		<p class="center light">{{ site.data.home.paragraph }}</p>
+			  <p class="center light">{{ site.data.home.paragraph1 }}</p>
+			  <p class="center light">{{ site.data.home.paragraph2 }}</p>
     	</div>
   	</div>
 </div>
